--- a/pom.xml
+++ b/pom.xml
@@ -26,11 +26,11 @@
 
     <dependencies>
 
-        <!--<dependency>-->
-        <!--<groupId>com.google.guava</groupId>-->
-        <!--<artifactId>guava</artifactId>-->
-        <!--<version>RELEASE</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>RELEASE</version>
+        </dependency>
 
         <dependency>
             <groupId>net.sf.jung</groupId>
